# planning_ai

./: .gitignore  flow_log.txt  main.py  main_bfs.py  main_mem.py  main_queue.py  main_schema.py  pyproject.toml
docs/: architecture_overview.md  code_review_findings.md  flow_steps.md  main_prompt_backup.yaml  setup_guide.md
src/crews/designer_crew/: crew.py
src/crews/designer_crew/config/: agents.yaml  tasks.yaml
src/crews/manager_crew/: crew.py  manager_schemas.py
src/crews/manager_crew/config/: agents.yaml  tasks.yaml
src/crews/planners_crew/: crew.py  crew_investigate.py
src/crews/planners_crew/config/: agents.yaml  (+2 more)
src/crews/planning_reviewer_crew/: crew.py
src/crews/reviewer_crew/: crew.py
src/crews/writer_crew/: crew.py
src/enums/: llm_name_enum.py  work_status_enum.py
src/flow/: flow.py
src/flows/: bfs_flow.py  bfs_node_flow.py  depth_first_traversal_flow.py  helpers.py
src/generic/: base_schema.py  init_idea.py  llm_utils.py  llm_utils_old.py  node.py
src/llm_completion/: DESIGNER_STANDARD_FORMAT.md  designer_completion.py  manager_completion.py
src/llm_prompt/: task_prompt.py
src/resources/: flow_config.yaml  init_idea.yaml  init_vision.yaml
src/schemas/: __init__.py  base.py  component.py  concept.py  module.py  step.py  task.py
src/state/: node_state.py  state.py
src/tests/: fake_crewai_llm.py  fake_langchain_llm.py  test_depth_first_traversal_flow.py  test_flow.py  test_manager_crew.py  test_planners_crew.py  test_planning_reviewer_crew.py  test_reviewer_crew.py  test_writer_crew.py  verify_dft_flow.py  verify_split.py
(+6 files in other folders)
